--- a/client/src/components/Styles.css
+++ b/client/src/components/Styles.css
@@ -58,6 +58,6 @@
   z-index: 2;
   transform: translate(-50%, -50%);
   text-align: left;
-  color: #fff;
+  color: rgb(0, 0, 0);
   float: left;
 }
