--- a/client/src/components/Styles.css
+++ b/client/src/components/Styles.css
@@ -2,12 +2,8 @@
   background-color: #01b159;
   border-color: #01b159;
   color: #fff;
-  width: 7%;
-  height: 4.4rem;
-  float: left;
-  position: absolute;
-  right: 18%;
-  transform: translate(0%, -50%);
+  position: relative;
+  
 }
 
 .btn:hover {
@@ -17,47 +13,106 @@
   transition: 0.3s ease;
 }
 
+.btn:focus {
+  background-color: #1db2d8;
+  border-color: #1db2d8;
+  color: hsla(0, 0%, 100%, 0.8);
+}
+
+.btn-search {
+  width: 105px;
+  height: 70px;
+  position:relative;
+  margin: auto -20.5%;
+  float:left;
+}
+
+.btn-newProduct {
+  max-width: 200px;
+  height: 50px;
+  bottom:10%;
+}
+
+.btn-submit {
+  position: relative;
+}
+
+.errors {
+  margin-bottom: 10px;
+}
+
 .main {
-  height: 100vh;
+  min-height: 100vh;
   max-height: 999px;
+  margin-left:auto;
+    margin-right:auto;
+   
   padding: 0;
   color: #fff;
-  position: relative;
-  overflow: hidden;
+  overflow: scroll;
   display: flex;
   align-items: center;
 }
 
 .label {
-  position: absolute;
-  top: 20%;
-  left: 50%;
+  position: relative;
   z-index: 2;
-  transform: translate(-50%, -50%);
+  
   text-align: center;
   color: #fff;
   padding: 0 15px;
 }
 
+.primary-header {
+  width: 100%;
+  margin: 2% auto 2%;
+  padding-top: 30px;
+}
+
+.secondary-header {
+  width: 100%;
+  margin: 50px auto 2%;
+}
+
 .description {
-  position: absolute;
-  font-size: 18px;
-  top: 30%;
-  left: 15%;
-  right: 15%;
+  position: relative;
   color: darkgray;
+  width:78%;
+  text-align: center;
+}
+
+.primary-desc {
+  top: 0%;
+
+  margin:auto auto 50px auto;
+  font-size: 18px;
+}
+
+.secondary-desc {
+  margin: auto auto 50px auto;
+  font-size: 16px;
 }
 
 .form-input {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  height: 4rem;
-  width: 50%;
-  margin-right: 10%;
+  position: relative;
+  margin: auto 20%;
+
+  height: 70px;
+  width: 55%;
+  
   z-index: 2;
-  transform: translate(-50%, -50%);
+  float:left;
   text-align: left;
   color: rgb(0, 0, 0);
-  float: left;
+}
+
+.modal-style {
+  z-index: 3;
+  color: rgb(0, 0, 0);
+  height:250px;
+}
+
+.search-bar {
+  width: 100%;
+  margin: 30px auto 50px;
 }
